# gbot

./: CMakeLists.txt  Makefile  dpdk.txt
alt/: Makefile  README.md  main.cpp  rx.cpp  rx.hpp  sentinel.hpp  tx.cpp  tx.hpp  utils.h
alt/config/: config.cpp  config.h  config.txt
alt/dpdk/: dpdk.cpp  dpdk.h
python/src/: bina.py  connect.py  dump  polyg.py  tickers
src/: arp.cpp  crypto.cpp  main.cpp  test.cpp  utils.h
src/crypto/: Makefile  README  intrinsics.cpp  ossl-sample.cpp  ossl-test.cpp  ossl.cpp  ossl.hpp  sample_http_client.cpp  sample_tls_crypto.cpp  sample_tls_crypto.hpp
